Fix style issues in stats' scrollbar page

--- a/Transcyclopedia/sanfrancisco/bart/css_assets/light_dark_mode_bart.css
+++ b/Transcyclopedia/sanfrancisco/bart/css_assets/light_dark_mode_bart.css
@@ -15,7 +15,7 @@
 }
 
 .light_mode #list_of_departures::-webkit-scrollbar-track, .light_mode #range_of_routes::-webkit-scrollbar-track,
-.light_mode #map_inter::-webkit-scrollbar-track, .stats::-webkit-scrollbar-track {
+.light_mode #map_inter::-webkit-scrollbar-track, .light_mode .stats::-webkit-scrollbar-track {
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.25);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -24,7 +24,7 @@
 }
 
 .light_mode #list_of_departures::-webkit-scrollbar-thumb, .light_mode #range_of_routes::-webkit-scrollbar-thumb,
-.light_mode #map_inter::-webkit-scrollbar-thumb, .stats::-webkit-scrollbar-thumb {
+.light_mode #map_inter::-webkit-scrollbar-thumb, .light_mode .stats::-webkit-scrollbar-thumb {
     border: 1px solid rgba(0, 0, 0, 0.18);
     background: rgba(0, 0, 0, 0.25);
     border-radius: 10px;
